customized admin page and added user lockout feature

--- a/RealEstateAgency.Infrastructure/RealEstateAgency.Infrastructure.csproj
+++ b/RealEstateAgency.Infrastructure/RealEstateAgency.Infrastructure.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RealEstateAgency.Core\RealEstateAgency.Core.csproj" />
+  </ItemGroup>
+
 </Project>
