--- a/RealEstateAgency.Service/RealEstateAgency.Service.csproj
+++ b/RealEstateAgency.Service/RealEstateAgency.Service.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RealEstateAgency.Core\RealEstateAgency.Core.csproj" />
+  </ItemGroup>
+
 </Project>
