--- a/RealEstateAgency/appsettings.json
+++ b/RealEstateAgency/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(local)\\SQLEXPRESS;Initial Catalog=RealEstateAgencyDb;Integrated Security=True"
+    "DefaultConnection": "Data Source=(local)\\SQLEXPRESS;Initial Catalog=RealEstateAgencyDb;Integrated Security=True",
+    "RealEstateAgencyMVCContext": "Server=(localdb)\\mssqllocaldb;Database=RealEstateAgencyMVC.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
