added estate pages and integrated google maps api

--- a/RealEstateAgency/RealEstateAgencyMVC.csproj
+++ b/RealEstateAgency/RealEstateAgencyMVC.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="jTable" Version="2.4.0" />
+    <PackageReference Include="Microsoft.AspNet.WebHelpers" Version="3.2.9" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.10" />
