--- a/RealEstateAgency.Service/RealEstateAgency.Service.csproj
+++ b/RealEstateAgency.Service/RealEstateAgency.Service.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.10" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.4" />
   </ItemGroup>
 
   <ItemGroup>
